# RoastDegreeAnalyzer

./: .gitmodules  CMakeLists.txt  Client.html  README.md  Server.cpp  cubicFitter.py
